created card container and appended data

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         </ul>
     </nav>
 
+    <div class="topnews-header">
+        <h1 class="topnews-text">Top News</h1>
+    </div>
+
     <div class="card-container" id="cardContainer"></div>
 
     <!-- bootstrap bundle -->
@@ -48,3 +52,4 @@
 
 </body>
 </html>
+
