--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GNews Formative</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,22 +27,32 @@
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Sort by Country</a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">View All</a></li>
+                    <li id="topHeadlines"><a class="dropdown-item" href="#">Global Top News</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">America</a></li>
-                    <li><a class="dropdown-item" href="#">United Kingdom</a></li>
-                    <li><a class="dropdown-item" href="#">New Zealand</a></li>
+                    <li id="us"><a class="dropdown-item" href="#">America</a></li>
+                    <li id="gb"><a class="dropdown-item" href="#">United Kingdom</a></li>
+                    <li id="fr"><a class="dropdown-item" href="#">France</a></li>
+                    <li id="ca"><a class="dropdown-item" href="#">Canada</a></li>
+                    <li id="ja"><a class="dropdown-item" href="#">Japan</a></li>
+                    <li id="au"><a class="dropdown-item" href="#">Australia</a></li>
                 </ul>
                 </li>
             </div>
         </ul>
     </nav>
 
-    <div class="topnews-header">
-        <h1 class="topnews-text">Top News</h1>
+    <div class="topnews-header" id="topNewsHeader">
+        
     </div>
 
     <div class="card-container" id="cardContainer"></div>
+
+    <div class="footer">
+        <div class="footer-left">
+            <h2>Top News</h2>
+        </div>
+        <div class="footer-right"></div>
+    </div>
 
     <!-- bootstrap bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
