--- a/index.html
+++ b/index.html
@@ -47,11 +47,38 @@
 
     <div class="card-container" id="cardContainer"></div>
 
+
+    <div class="about">
+        <h1>Welcome to the about section! Learn about...</h1>
+
+        <div class="about-div about-gnews">
+            <h1>GNews Company</h1>
+        </div>
+        <div class="about-div about-me">    
+            <h1>Kezia the Developer</h1>
+        </div>
+        <div class="about-div about-project">
+            <h1>This Project</h1>
+        </div>
+    </div>
+
+
     <div class="footer">
         <div class="footer-left">
-            <h2>Top News</h2>
+            <h5 class="footer-left__text">Global Top News</h5>
+            <h5 class="footer-left__text">American Top News</h5>
+            <h5 class="footer-left__text">United Kingdom Top News</h5>
+            <h5 class="footer-left__text">France Top News</h5>
+            <h5 class="footer-left__text">Canada Top News</h5>
+            <h5 class="footer-left__text">Japan Top News</h5>
+            <h5 class="footer-left__text">Australia Top News</h5>
         </div>
-        <div class="footer-right"></div>
+        <div class="footer-right">
+            <h2 class="footer-right__text">Home</h2>
+            <h2 class="footer-right__text">About</h2>
+            <h2 class="footer-right__text">Facebook</h2>
+            <h2 class="footer-right__text">Instagram</h2>
+        </div>
     </div>
 
     <!-- bootstrap bundle -->
