--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GNews Formative</title>
+    <title>World News</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
     <nav class="navigation">    
         <ul class="nav nav-tabs">
             <div class="nav-left">
-                <a class="nav-link" href="index.html"><h1 class="nav-heading">TopNews.com</h1></a>  
+                <a class="nav-link" href="index.html"><img src="./img/world-news.svg" class="worldnews-logo" alt=""></a>  
             </div>  
             <div class="nav-right">
                 <li class="nav-item">
@@ -42,23 +42,46 @@
     </nav>
 
     <div class="topnews-header" id="topNewsHeader">
-        
+        <div class="hero-left">
+            <h1 class="hero-left__header">Welcome to World News</h1>
+            <p class="hero-left__p">Browse by Country through the top stories that are encapsulating the world today. Read all about the top global news by scrolling down, or before scrolling, choose a country in the sorter in the top right of the screen.</p>
+            <img class="scroll-down" src="./img/scroll-down-icon-28.jpg" alt="">
+
+        </div>
+        <div class="hero-right">
+            <div class="hero-right__img"></div>
+        </div>
     </div>
 
     <div class="card-container" id="cardContainer"></div>
 
 
     <div class="about">
-        <h1>Welcome to the about section! Learn about...</h1>
-
-        <div class="about-div about-gnews">
-            <h1>GNews Company</h1>
+        <div class="about-us__header">
+            <h1 class="about-us__header-text">About Us</h1>
         </div>
-        <div class="about-div about-me">    
-            <h1>Kezia the Developer</h1>
-        </div>
-        <div class="about-div about-project">
-            <h1>This Project</h1>
+        <div class="about-us__cards">
+            <div class="about-us__individual-1">
+                <div class="about-div about-gnews">
+                    <img class="about-img" src="./img/gnews-logo.png" alt="">
+                    <h1 class="about-h1">GNews Company</h1>
+                    <p class="about-p">GNews API is a simple news REST API with which you can search news articles and get results in JSON. It is also possible to get the top news headlines based on Google ranking. It is a free service that uses advanced extraction techniques to retrieve the different attributes that make up an article.</p>
+                </div>
+            </div>
+            <div class="about-us__individual-2">
+                <div class="about-div about-me">  
+                    <img class="about-img" src="./img/Photo23.jpg" alt="">  
+                    <h1 class="about-h1">Developer</h1>
+                    <p class="about-p">Hi, I'm Kezia! A 23 year old developer interested in Graphic Design, Web Design, and UX/Ui Processes. I am currently studying Level 6 Web and UX Design. I love music, art and video games. I gather creativity and inspiration from all of these things to motivate me and help me create the best work that I can.</p>
+                </div>
+            </div>
+            <div class="about-us__individual-3">
+                <div class="about-div about-project">
+                    <img class="about-img" src="./img/logo-small.jpg" alt="">
+                    <h1 class="about-h1">World News<br>(This Project)</h1>
+                    <p class="about-p">World News was created for Formative 3.1 at Yoobee Colleges. Gathering an API from an external news source, we had to use this to create our own website that would display news articles from different parts of the world. I hope you enjoyed the project.</p>
+                </div>
+            </div>
         </div>
     </div>
 
